# RobustSep

./: .gitignore  README.md  pyproject.toml
RobustSep-v1.1/: README.md
RobustSep-v1.1/docs/: Training Plan for VAE.md  docs_dataset_implementation_plan.md  final_arch.md  repo_checklist_from_dataflow.md
paper/main/: main.aux  main.out  main.tex  robustsep_paper_review.md
robustsep_pkg/: __init__.py  cli.py
robustsep_pkg/core/: __init__.py  artifact_io.py  channels.py  config.py  seeding.py
robustsep_pkg/data/: __init__.py  batching.py  dataset.py  enrichment.py  intent_adapter.py  shard_reader.py  shard_record.py  source_weighting.py  split.py  torch_dataset.py  training_adapter.py
robustsep_pkg/docs/: README.md  final_arch.md  repo_checklist_from_dataflow.md  vae_fs_pargb2cmyk.md
robustsep_pkg/engine/: __init__.py  candidate.py  escalation.py  selection.py
robustsep_pkg/eval/: __init__.py  metrics.py  suite.py
robustsep_pkg/manifests/: __init__.py  (+1 more)
scripts/: apply_icc_cmyk_to_shards.py  download_public_datasets.sh  prepare_doclaynet_patches.py  prepare_robustsep_dataset.py  run_adaptive_surrogate_training.py
tests/: test_cli.py  test_core_primitives.py  test_dataset_enrichment.py  test_dataset_loader.py  test_eval_suite.py  test_feasibility.py  test_patch_engine.py  test_proposer_model.py  test_proposer_training.py  test_surrogate_data.py  test_surrogate_model.py  test_surrogate_probe.py  test_surrogate_shard_writer.py  test_surrogate_training.py  test_target_generation_pipeline.py  test_targets.py  test_teacher.py  test_training_adapter.py
(+39 files in other folders)
